compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_segment_conflicting_endianness2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<1>> { <<1:native-big>> -> 1 }"

---
error: BitString Segment Error
  ┌─ /src/one/two.gleam:1:25
  │
1 │ case <<1>> { <<1:native-big>> -> 1 }
  │                         ^^^ This is an extra endianness specifier.

Hint: This segment already has an endianness of native.
See: https://gleam.run/book/tour/bit-strings.html

